[gd_scene load_steps=5 format=2]

[ext_resource path="res://plant_root/PlantRoot.gd" type="Script" id=1]
[ext_resource path="res://plant_root/RootHair.gd" type="Script" id=2]

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CircleShape2D" id=1]
radius = 64.0

[node name="PlantRoot" type="Area2D"]
show_behind_parent = true
z_index = -1
z_as_relative = false
script = ExtResource( 1 )
_move_speed = 3000.0

[node name="Roots" type="Node2D" parent="."]
position = Vector2( -24, 0 )
z_index = -1
z_as_relative = false

[node name="Root1" type="Position2D" parent="Roots"]
position = Vector2( 64, 40 )
z_index = -1
z_as_relative = false

[node name="RootHair" type="Line2D" parent="Roots/Root1"]
modulate = Color( 1.5, 1.5, 1.5, 1 )
position = Vector2( 35, 38 )
z_index = -1
z_as_relative = false
points = PoolVector2Array( -286, 207, -146, 92, -110, 14, -34, -38 )
width = 32.0
width_curve = SubResource( 2 )
default_color = Color( 0.0292664, 0.535156, 0.179452, 1 )
joint_mode = 1
begin_cap_mode = 2
end_cap_mode = 2
round_precision = 14
antialiased = true
script = ExtResource( 2 )

[node name="Root2" type="Position2D" parent="Roots"]
position = Vector2( 80, -16 )
z_index = -1
z_as_relative = false

[node name="RootHair" type="Line2D" parent="Roots/Root2"]
modulate = Color( 1.5, 1.5, 1.5, 1 )
position = Vector2( 35, 38 )
z_index = -1
z_as_relative = false
points = PoolVector2Array( -286, 207, -146, 92, -110, 14, -34, -38 )
width = 32.0
width_curve = SubResource( 2 )
default_color = Color( 0.0292664, 0.535156, 0.179452, 1 )
joint_mode = 1
begin_cap_mode = 2
end_cap_mode = 2
round_precision = 14
antialiased = true
script = ExtResource( 2 )

[node name="Root3" type="Position2D" parent="Roots"]
position = Vector2( 48, -48 )
z_index = -1
z_as_relative = false

[node name="RootHair" type="Line2D" parent="Roots/Root3"]
modulate = Color( 1.5, 1.5, 1.5, 1 )
position = Vector2( 35, 38 )
z_index = -1
z_as_relative = false
points = PoolVector2Array( -286, 207, -146, 92, -110, 14, -34, -38 )
width = 32.0
width_curve = SubResource( 2 )
default_color = Color( 0.0292664, 0.535156, 0.179452, 1 )
joint_mode = 1
begin_cap_mode = 2
end_cap_mode = 2
round_precision = 14
antialiased = true
script = ExtResource( 2 )

[node name="Root4" type="Position2D" parent="Roots"]
position = Vector2( -40, -40 )
z_index = -1
z_as_relative = false

[node name="RootHair" type="Line2D" parent="Roots/Root4"]
modulate = Color( 1.5, 1.5, 1.5, 1 )
position = Vector2( 35, 38 )
z_index = -1
z_as_relative = false
points = PoolVector2Array( -286, 207, -146, 92, -110, 14, -34, -38 )
width = 32.0
width_curve = SubResource( 2 )
default_color = Color( 0.0292664, 0.535156, 0.179452, 1 )
joint_mode = 1
begin_cap_mode = 2
end_cap_mode = 2
round_precision = 14
antialiased = true
script = ExtResource( 2 )

[node name="Shape" type="CollisionShape2D" parent="."]
z_index = -1
z_as_relative = false
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_PlantRoot_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
